# learn-axum

./: Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20240321000000_init.sql
src/: main.rs
src/domain/entities/: follow.rs  mod.rs  post.rs  user.rs
src/infrastructure/database/: postgres.rs
src/interfaces/handlers/: follow_handler.rs  mod.rs  post_handler.rs  user_handler.rs
