[package]
name = "axum-clean-arch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }